# read_env_pydantic

./: .gitignore  pydantic_env_reader.py  pyproject.toml
