[tool.poetry]
name = "read-env-pydantic"
version = "0.1.0"
description = ""
authors = ["maktechdev <69475978+fullTimeCode@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
